[project]
name = "pydantic-ai-evals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=1.3.0",
    "langchain>=0.3.22",
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-google-genai>=2.1.2",
    "langchain-mcp-adapters>=0.0.9",
    "langgraph>=0.3.31",
    "logfire>=3.20.0",
    "loguru>=0.7.3",
    "mcp==1.9.0",
    "openai-agents>=0.0.12",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "pydantic-ai-slim[bedrock,mcp]>=0.2.15",
    "pydantic-evals[logfire]>=0.2.15",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.10",
    "streamlit>=1.45.1",
]

[tool.uv.build-backend]
module-name = "agents_mcp_usage"
module-root = ""

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"
